...
            verticalArrangement = Arrangement.Center,
        ) {
          // App Logo Image
          Image(
              painter = painterResource(id = R.drawable.travelpouch_logo),
              contentDescription = "App Logo",
              modifier = Modifier.fillMaxWidth().height(150.dp).testTag("appLogo"))

          Spacer(modifier = Modifier.height(16.dp))

          // Welcome Text
          Text(
              modifier = Modifier.testTag("welcomText").padding(horizontal = 16.dp),
              text = "Welcome",
              style =
                  MaterialTheme.typography.headlineLarge.copy(fontSize = 36.sp, lineHeight = 44.sp),
              fontWeight = FontWeight.Bold,
              textAlign = TextAlign.Center)

...
                      }
                }

            Button(
                onClick = { navigationActions.navigateTo(Screen.SIGN_IN_PASSWORD) },
                enabled = !methodChosen.value) {
                  Text("Sign in with email and password")
                }
          }
          if (currentUser != null &&
              !signInCompleted
                  .value && isConnectedToNetwork.value != null) { // extra condition on sign-in completion to avoid unnecessary
            // recompositions
...
