...
  val images =
      listOf(
          "https://img.yumpu.com/30185842/1/500x640/afps-attestation-de-formation-aux-premiers-secours-programme-.jpg",
          "https://wallpapercrafter.com/desktop6/1606440-architecture-buildings-city-downtown-finance-financial.jpg",
          "https://assets.entrepreneur.com/content/3x2/2000/20151023204134-poker-game-gambling-gamble-cards-money-chips-game.jpeg")
  Scaffold(
      modifier = Modifier.testTag("travelActivitiesScreen"),
      floatingActionButton = {
        FloatingActionButton(
            onClick = { navigationActions.navigateTo(Screen.ADD_ACTIVITY) },
            modifier = Modifier.testTag("addActivityButton")) {
              Icon(imageVector = Icons.Default.Add, contentDescription = null)
            }
...
                                      text = "No activities planned", // Add newline
                                      style =
                                          MaterialTheme.typography.bodyLarge.copy(
                                              fontWeight = FontWeight.Bold),
                                      color = MaterialTheme.colorScheme.onBackground,
                                      modifier =
                                          Modifier.align(Alignment.Center).testTag("emptyTravel1"))
                                  Text(
                                      text = "for this trip",
                                      style =
                                          MaterialTheme.typography.bodyLarge.copy(
                                              fontWeight = FontWeight.Bold),
                                      color = MaterialTheme.colorScheme.onBackground,
                                      modifier =
                                          Modifier.align(Alignment.Center)
                                              .padding(top = 42.dp)
                                              .testTag("emptyTravel2"))
                                }
                          }
                    } else {
                      items(listOfActivities.value.size) { idx ->
                        ActivityItem(
                            listOfActivities.value[idx],
...
